@@ -1287,7 +1287,14 @@ sub qualityorder {
 		    "dpi_high5",
 		    "dpi_highmono",
 		    "dpi_highmono2",
+		    "dpi_highmono3",
+		    "dpi_highmono4",
+		    "dpi_highmono5",
 		    "dpi_mono",
+		    "dpi_mono2",
+		    "dpi_mono3",
+		    "dpi_mono4",
+		    "dpi_mono5",
 		    "dpi_draft",
 		    "dpi_draft2",
 		    "dpi_draft3",
@@ -1299,11 +1306,15 @@ sub qualityorder {
                     "dpi_std5",
 		    "dpi_draftmono",
 		    "dpi_draftmono2",
+		    "dpi_draftmono3",
+		    "dpi_draftmono4",
+		    "dpi_draftmono5",
 		    "dpi_glossphotohigh",
 		    "dpi_photohigh",
 		    "dpi_photohigh2",
 		    "dpi_photohigh3",
 		    "dpi_photohigh4",
+		    "dpi_photohigh5",
 	            "dpi_tshirt",
 		    "dpi_photomed",
 		    "dpi_photomed2",
@@ -1311,13 +1322,16 @@ sub qualityorder {
 		    "dpi_photo2",
 		    "dpi_photo3",
 		    "dpi_photo4",
+		    "dpi_photo5",
 		    "dpi_photodraft",
 		    "dpi_photodraft2",
 		    "dpi_photodraft3",
 		    "dpi_photodraft4",
+		    "dpi_photodraft5",
 		    "dpi_photomonohigh",
 		    "dpi_photomonomed",
 		    "dpi_photomono",
+		    "dpi_photomono2",
 		    "dpi_photomonodraft",
                     "dpi_ohphigh",
                     "dpi_ohp"
