@@ -300,7 +300,11 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
   3) Galician and Ukrainian translations have been added.
 
   4) (API) Added function stp_vars_copy_from() to override settings in
-     one settings object with those in anyother.
+     one settings object with those in another.
+
+  5) The following printer models were completely redefined:
+
+       Canon PIXMA iP5000 (EXPERIMENTAL)
 
 * Changes from 5.2.6
 
